<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="com.example.thibanglaixe.model.Test"/>
        <variable
            name="test"
            type="Test" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragments.TestOpenFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_constraint"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageButton
                android:id="@+id/back_button_test_open_fragment"
                android:layout_width="17dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/back"
                android:textColor="@color/black"
                tools:ignore="ContentDescription" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/blue"
                android:background="@android:color/transparent"
                android:text="@string/n_p_b_i"
                android:layout_gravity="center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top_constraint"
            tools:ignore="ExtraText">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/title_open_test"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@{"Tổng số câu:" + test.numberOfQuestion}'
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thời gian làm bài: "
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_cau_toi_thieu"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diem_liet"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"/>
            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="center"
                android:backgroundTint="@color/blue"
                android:layout_margin="15dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>