<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragments.TestQuestionFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:id="@+id/linear_layout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/back_button_test_question_fragment"
                    android:layout_weight="1"
                    android:layout_width="15dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back"
                    android:background="@android:color/transparent"
                    tools:ignore="ContentDescription,NestedWeights" />
                <TextView
                    android:id="@+id/timer_view"
                    android:layout_weight="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/button_submit"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_p_b_i"
                    android:background="@android:color/transparent"
                    android:textColor="@color/blue"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_numberOfQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="NotSibling" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/linear_layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:background="@color/blue">

            <Button
                android:id="@+id/button_back_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:icon = "@drawable/back_question"
                android:text="@string/c_u_tr_c" />
            <ImageView
                android:id="@+id/button_select_question"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
                />

            <Button
                android:id="@+id/button_next_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/next_question"
                android:background="@android:color/transparent"
                android:text="@string/c_u_sau" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>