<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.thibanglaixe.model.Test"/>
        <variable
            name="test"
            type="Test" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragments.ResultFragment">

        <LinearLayout
            android:id="@+id/linear_layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/back_button_result_question_fragment"
                android:layout_weight="1"
                android:layout_width="15dp"
                android:layout_height="40dp"
                android:src="@drawable/back"
                android:background="@android:color/transparent"
                tools:ignore="ContentDescription,NestedWeights" />
            <TextView
                android:id="@+id/timer_view"
                android:layout_weight="2"
                android:text="@string/result"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/buttonTestAgain"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="20dp"
                android:layout_margin="5dp">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/testAgain"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_layout_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_top">
            <TextView
                android:id="@+id/stateOfTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{test.toString()}"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_u_sai"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <TextView
                        android:id="@+id/textViewSelectAll"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/all"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:gravity="center"
                        tools:ignore="InvalidId" />
                    <LinearLayout
                        android:id="@+id/linearSelectCorrectQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/correct"
                            tools:ignore="ContentDescription" />
                        <TextView
                            android:id="@+id/textViewNumberOfCorrectAnswer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linearSelectIncorrectQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">
                        <androidx.cardview.widget.CardView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_margin="5dp"
                            android:backgroundTint="@color/red">
                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_margin="5dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_baseline_clear_24"
                                tools:ignore="ContentDescription" />
                        </androidx.cardview.widget.CardView>
                        <TextView
                            android:id="@+id/textViewNumberOfInCorrectAnswer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            tools:ignore="DuplicateIds" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:id="@+id/recyclerViewResultOfQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_middle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>